[tool.poetry]
name = "grok-ddns"
version = "0.1.0"
description = ""
authors = ["Gentman Tan <gentmantan@gmail.com>"]
readme = "README.md"
license = "BSD"
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.32.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
